; ModuleID = '/home/carl/AnghaBench/jemalloc/test/src/extr_test.c_reentrancy_t_str.c'
source_filename = "/home/carl/AnghaBench/jemalloc/test/src/extr_test.c_reentrancy_t_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [14 x i8] c"non-reentrant\00", align 1
@.str.1 = private unnamed_addr constant [15 x i8] c"libc-reentrant\00", align 1
@.str.2 = private unnamed_addr constant [20 x i8] c"arena_new-reentrant\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @reentrancy_t_str to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @reentrancy_t_str(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %8 [
    i32 128, label %5
    i32 129, label %6
    i32 130, label %7
  ]

5:                                                ; preds = %1
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %10

6:                                                ; preds = %1
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %10

7:                                                ; preds = %1
  store i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.2, i64 0, i64 0), i8** %2, align 8
  br label %10

8:                                                ; preds = %1
  %9 = call i32 (...) @unreachable()
  br label %10

10:                                               ; preds = %5, %6, %7, %8
  %11 = load i8*, i8** %2, align 8
  ret i8* %11
}

declare dso_local i32 @unreachable(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
